--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <h3 class="my-4"><b>Simples Método de 30 Minutos para Fazer Chover Abundância</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://vimeo.com/690525396",s.async=!0,document.head.appendChild(s);</script>
+            
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/690525396?h=028743244f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="vsl"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
