--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Método de 30 Minutos para Fazer Chover Abundância</b></h3>
+            <h3 class="my-4"><b>Simples Método de 30 Minutos para Desbloquear os Chakras e Atrair a Abundância</b></h3>
 
             <!-- VSL -->
             
