--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- VSL -->
             
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/694600300?h=6294319058" width="640" height="400" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><</div><script src="https://player.vimeo.com/api/player.js"></script>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/690525396?h=028743244f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="vsl"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 
             <!-- Botão -->
