--- a/ps/index.html
+++ b/ps/index.html
@@ -5,16 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66438313-2">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-66438313-2');
-</script>
 </head>
 <body> 
   <div class="container">
@@ -25,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://metododesbloqueia.site/">CONTINUAR</a>
+          <a class="btn" href="https://protocolozerobarriga.com/">CONTINUAR</a>
         </div>
       </div>    
     </div>
