--- a/ps/index.html
+++ b/ps/index.html
@@ -11,11 +11,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Tudo Pronto!</h1>
-          <p>Clique no botão abaixo para continuar</p>
+          <h1>Tudo Certo!</h1>
+          <p>Clique no botão abaixo para conhecer o método</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protocolozerobarriga.com/">CONTINUAR</a>
+          <a class="btn" href="https://metododesbloqueia.site/">CONTINUAR</a>
         </div>
       </div>    
     </div>
